--- a/style.css
+++ b/style.css
@@ -167,6 +167,7 @@ nav a {
   transition: 1.1s 0.2s width ease-in-out !important;
 }
 input[type="text"],
+input[type="email"],
 textarea {
   display: block;
   width: 100%;
